--- a/frontend/src/assets/styles/app.scss
+++ b/frontend/src/assets/styles/app.scss
@@ -12,11 +12,15 @@
 
 .\? {
   border: 2px dashed red;
-  animation: blinking 700ms infinite;
+  animation: blinking 600ms infinite;
 }
 
 @keyframes blinking {
   50% {
     border-color: #fff;
   }
+}
+
+.text-system {
+  @apply text-xs;
 }
